// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package languages.nodejs.testdata.services.simple;

message PostRequest {
    string input = 1;
}

message PostResponse {
    string output = 1;
}

service PostService {
    rpc Post(PostRequest) returns (PostResponse);
}
